[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "git-reflow"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "anthropic",
    "openai",
    "ollama",
    "tomli; python_version < '3.11'",
]

[tool.setuptools.packages.find]
include = ["reflow*"]

[project.scripts]
git-reflow = "reflow.main:main"
git-rf     = "reflow.main:main"
git-rw     = "reflow.main:main"
git-ck     = "reflow.main:main"

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
