[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reflow"
version = "0.1.0"
authors = [
    { name = "André Savioli", email = "andre.savioli@icloud.com" },
]
requires-python = ">=3.9"
dependencies = [
    "anthropic",
    "openai",
    "ollama",
    "tomli; python_version < '3.11'",
]

[tool.setuptools.packages.find]
include = ["reflow*"]

[project.scripts]
reflow = "reflow.main:main"
rf     = "reflow.main:main"
rw     = "reflow.main:main"
ck     = "reflow.main:main"

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
